--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@inertiajs/react": "^1.0.0",
         "@react-pdf-viewer/core": "^3.12.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/lodash": "^4.17.20",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
@@ -19,6 +20,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
+        "nodemon": "^3.1.10",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -29,16 +31,22 @@
     },
     "dependencies": {
         "@react-pdf-viewer/core": "^3.12.0",
+        "@react-pdf-viewer/default-layout": "^3.12.0",
         "autoprefixer": "^10.4.14",
         "bootstrap": "^5.3.6",
         "browser-sync": "^2.29.3",
-        "datatables.net-bs5": "^2.3.1",
+        "datatables.net-bs5": "^2.3.2",
+        "datatables.net-buttons": "^3.2.4",
+        "datatables.net-buttons-bs5": "^3.2.4",
+        "datatables.net-buttons-dt": "^3.2.4",
+        "datatables.net-dt": "^2.3.2",
         "datatables.net-plugins": "^2.3.0",
         "datatables.net-react": "^1.0.1",
         "datatables.net-responsive-bs5": "^3.0.4",
         "filepond": "^4.32.7",
         "filepond-plugin-file-poster": "^2.5.2",
         "filepond-plugin-image-preview": "^4.6.12",
+        "fuse.js": "^7.1.0",
         "gulp": "^4.0.2",
         "gulp-beautify": "^3.0.0",
         "gulp-cssbeautify": "^3.0.1",
@@ -47,9 +55,12 @@
         "gulp-sourcemaps": "^3.0.0",
         "html-to-react": "^1.7.0",
         "html2pdf.js": "^0.10.3",
+        "jszip": "^3.10.1",
         "pdfjs-dist": "^3.11.174",
+        "pdfmake": "^0.2.20",
         "react": "^18.2.0",
         "react-bootstrap": "^2.10.10",
+        "react-datepicker": "^8.4.0",
         "react-dom": "^18.2.0",
         "react-filepond": "^7.1.3",
         "react-hot-toast": "^2.5.2",
